--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
                 <groupId>com.theoryinpractise</groupId>
                 <artifactId>clojure-maven-plugin</artifactId>
                 <version>1.7.1</version>
+                <!-- source directory -->
                 <configuration>
                     <sourceDirectories>
                         <sourceDirectory>src/main/clojure</sourceDirectory>
@@ -27,6 +28,7 @@
                         <testSourceDirectory>src/test/clojure</testSourceDirectory>
                     </testSourceDirectories>
                 </configuration>
+                <!-- phase configuration -->
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -44,15 +46,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
@@ -61,12 +54,6 @@
             <groupId>org.clojure</groupId>
             <artifactId>clojure</artifactId>
             <version>1.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
